force-app/main/default/objects/nFORCE__Business_Process__c/fields/nFORCE__Enable_Logging__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Enable_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable logging during the BPO Business Process.</description>
    <inlineHelpText>Select this checkbox to enable logging during your BPO Business Process.</inlineHelpText>
    <label>Enable Logging</label>
    <type>Checkbox</type>
</CustomField>