force-app/main/default/objects/nFORCE__Business_Process__c/fields/nFORCE__Enable_Method_Logging__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Enable_Method_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable logging upon method entrance and exit.</description>
    <inlineHelpText>Select this checkbox to enable logging upon method entrance and exit. **Note**: This will greatly increase the size of the logs included in your output.</inlineHelpText>
    <label>Enable Method Logging</label>
    <type>Checkbox</type>
</CustomField>