force-app/main/default/objects/nFORCE__Business_Process__c/fields/nFORCE__Encrypt_Business_Activity_State__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Encrypt_Business_Activity_State__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Administrators populate this optional checkbox field that, when set to true, encrypts the state data of the business activities. The default is true.</description>
    <inlineHelpText>Select checkbox to encrypt the state data of the business activities.</inlineHelpText>
    <label>Encrypt Business Activity State</label>
    <type>Checkbox</type>
</CustomField>