force-app/main/default/objects/nFORCE__Business_Process__c/fields/nFORCE__Include_Logs_In_Output__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Include_Logs_In_Output__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable logs in output.</description>
    <inlineHelpText>Select this checkbox to enable logs in output.</inlineHelpText>
    <label>Include Logs in Output</label>
    <type>Checkbox</type>
</CustomField>