force-app/main/default/objects/nFORCE__Business_Process__c/fields/nFORCE__Log_Level_To_Capture__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Log_Level_To_Capture__c</fullName>
    <description>Select the appropriate log level to capture for this process. - ERROR, WARN, INFO, DEBUG, FINE, FINER, FINEST.</description>
    <inlineHelpText>Using this optional field, administrators can select a log level to capture for the process to communicate what occurred during the execution. The options available are ERROR, WARN, INFO, DEBUG, FINE, FINER, FINEST.</inlineHelpText>
    <label>Log Level To Capture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
                <default>true</default>
                <label>Error</label>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Debug</fullName>
            </value>
            <value>
                <fullName>Fine</fullName>
            </value>
            <value>
                <fullName>Finer</fullName>
            </value>
            <value>
                <fullName>Finest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>