force-app/main/default/objects/nFORCE__Business_Process__c/fields/nFORCE__Override_Custom_Settings__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Override_Custom_Settings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable override of Business Process custom settings</description>
    <inlineHelpText>Select this checkbox to override the Business Process custom settings.</inlineHelpText>
    <label>Override Custom Settings</label>
    <type>Checkbox</type>
</CustomField>